--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -67,10 +67,9 @@
             </div>
         </section>
 
-        <h2 class="text-lg-end text-center m-5">Nuestra <span>Misión:</span></h2>
-
-        <section>
-            <div class="container textoMision justify-content-center mx-lg-5">
+        <section class="container sectionMision">
+            <h2 class="text-lg-end text-center m-5">Nuestra <span>Misión</span></h2>
+            <div class="container textoMision justify-content-center mx-lg-5 w-100">
                 <p class="text-start">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione beatae optio delectus
                     corporis omnis officiis dignissimos ipsum sed officia, aliquid rerum similique aperiam possimus nisi
                     exercitationem, fugit velit sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
